@startuml
interface Brand
abstract Phone

Brand <|.. HuaWei
Brand <|.. XiaoMi

Phone <|-- PhoneUpRight
Phone <|-- PhoneFolded

Phone o-- Brand

Client ..> Brand
Client ..> Phone

Phone : brand:Brand
Phone : open():void
Phone : close():void
Phone : call():void

Brand : open():void
Brand : close():void
Brand : call():void

Client : PhoneFolded():Phone
Client : PhoneUpRight():Phone
Client : HuaWei():brand
Client : XiaoMi():brand
@enduml